--- a/.github/workflows/build_builder.yml
+++ b/.github/workflows/build_builder.yml
@@ -1,10 +1,7 @@
 name: Build Kematian Stealer Builder
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build:
